plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.busuu.app'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2024.0.1"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.data:spring-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation("org.springframework.boot:spring-boot-starter-cache")
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Socket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework:spring-messaging'

	// Cache
	implementation("org.hibernate.orm:hibernate-jcache")
	implementation("javax.cache:cache-api:1.0.0")
	implementation "org.redisson:redisson:3.46.0"

	implementation "com.fasterxml.jackson.datatype:jackson-datatype-hibernate6"
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // Model Mapper
	implementation 'org.modelmapper:modelmapper:2.1.1'

	// Validation
	implementation 'jakarta.validation:jakarta.validation-api:3.1.0'

	// Gson
	implementation 'com.google.code.gson:gson:2.11.0'

	// JJWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'

	// JJWT IMPL
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'

	// JJWT Jackson
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Logging
	implementation 'org.springframework.boot:spring-boot-starter-logging'

	implementation 'ch.qos.logback:logback-classic'

	// Actuator
	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.3'

	// Swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

	// Cloudinary
	implementation 'com.cloudinary:cloudinary-http44:1.39.0'

	// Commons IO
	implementation 'commons-io:commons-io:2.16.1'

	// Flyway
	implementation("org.flywaydb:flyway-core:11.9.0")
	implementation("org.flywaydb:flyway-mysql:11.9.0")

	// Mail
	implementation("org.springframework.boot:spring-boot-starter-mail:3.5.0")


	//Apache POI for file processing (excel, word)

	// https://mvnrepository.com/artifact/org.apache.poi/poi
	implementation("org.apache.poi:poi:5.4.1")
	// https://mvnrepository.com/artifact/org.apache.poi/poi-scratchpad
	implementation("org.apache.poi:poi-scratchpad:5.4.1")
	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
	implementation("org.apache.poi:poi-ooxml:5.4.1")


	//Apache PDFBox for file processing (pdf)

	// https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox
	implementation("org.apache.pdfbox:pdfbox:3.0.5")


	// Oauth2 client
	implementation("org.springframework.security:spring-security-oauth2-client")

	// Oauth2 resource server
	implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")

	// Oauth2 client
	implementation("org.springframework.boot:spring-boot-starter-oauth2-client")

	// Google api client
	implementation("com.google.api-client:google-api-client:2.6.0")

	// Google oauth client jetty
	implementation("com.google.oauth-client:google-oauth-client-jetty:1.36.0")

	// Google api services people
	implementation("com.google.apis:google-api-services-people:v1-rev537-1.25.0")

	// Http Client
	implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
}

tasks.named('test') {
	useJUnitPlatform()
}
